fix for text getting slightly cut off in Safari

--- a/src/_scss/pages/awardV2/visualizations/awardViz.scss
+++ b/src/_scss/pages/awardV2/visualizations/awardViz.scss
@@ -47,7 +47,7 @@
     .award-viz__button {
         @include button-unstyled;
         @include display(flex);
-
+        line-height: normal;
         color: $color-link;
 
         &:hover, &:focus {
